[FIX] style, add auto overflow

--- a/activity_dashboard_mngmnt/static/src/css/style.scss
+++ b/activity_dashboard_mngmnt/static/src/css/style.scss
@@ -1,5 +1,5 @@
 .o_action_manager {
-  overflow: scroll !important;
+  overflow: auto !important;
 }
 .activity-dashboard-card {
     border-radius: 0.3rem;
